syntax = "proto3";

package swiftschool.academics.v1;

option go_package = "swiftschool/app/academics/v1;academicsv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "proto/common/v1/common.proto";

// ClassPeriodService manages class periods (bell schedule).
service ClassPeriodService {
  rpc CreateClassPeriod(CreateClassPeriodRequest) returns (ClassPeriodResponse) {
    option (google.api.http) = { post: "/api/class_periods/register" body: "*" };
  }
  rpc ListClassPeriods(swiftschool.common.v1.TenantListRequest) returns (ListClassPeriodsResponse) {
    option (google.api.http) = { get: "/api/class_periods/list" };
  }
}

message CreateClassPeriodRequest {
  string institute_id = 1;
  google.protobuf.StringValue name = 2;
  string start_time = 3;
  string end_time = 4;
  bool is_break = 5;
}

message ClassPeriodResponse {
  string id = 1;
  string institute_id = 2;
  google.protobuf.StringValue name = 3;
  string start_time = 4;
  string end_time = 5;
  bool is_break = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message ListClassPeriodsResponse {
  repeated ClassPeriodResponse periods = 1;
}
