syntax = "proto3";

package swiftschool.academics.v1;

option go_package = "swiftschool/app/academics/v1;academicsv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "proto/common/v1/common.proto";

// SubjectService manages subjects.
service SubjectService {
  rpc CreateSubject(CreateSubjectRequest) returns (SubjectResponse) {
    option (google.api.http) = { post: "/api/subjects/register" body: "*" };
  }
  rpc ListSubjects(swiftschool.common.v1.TenantListRequest) returns (ListSubjectsResponse) {
    option (google.api.http) = { get: "/api/subjects/list" };
  }
}

message CreateSubjectRequest {
  string institute_id = 1;
  string name = 2;
  google.protobuf.StringValue code = 3;
  string type = 4;
  double credits = 5;
}

message SubjectResponse {
  string id = 1;
  string institute_id = 2;
  string name = 3;
  google.protobuf.StringValue code = 4;
  string type = 5;
  double credits = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message ListSubjectsResponse {
  repeated SubjectResponse subjects = 1;
}
