syntax = "proto3";

package swiftschool.academics.v1;

option go_package = "swiftschool/app/academics/v1;academicsv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// TimetableService manages timetable entries.
service TimetableService {
  rpc CreateTimetableEntry(CreateTimetableEntryRequest) returns (TimetableEntryResponse) {
    option (google.api.http) = { post: "/api/timetable/register" body: "*" };
  }
  rpc GetClassTimetable(GetClassTimetableRequest) returns (ListTimetableEntriesResponse) {
    option (google.api.http) = { get: "/api/timetable/list" };
  }
}

message CreateTimetableEntryRequest {
  string institute_id = 1;
  string academic_session_id = 2;
  google.protobuf.StringValue class_id = 3;
  string day_of_week = 4;
  google.protobuf.StringValue period_id = 5;
  google.protobuf.StringValue subject_id = 6;
  google.protobuf.StringValue teacher_id = 7;
}

message TimetableEntryResponse {
  string id = 1;
  string institute_id = 2;
  string academic_session_id = 3;
  google.protobuf.StringValue class_id = 4;
  string day_of_week = 5;
  google.protobuf.StringValue period_id = 6;
  google.protobuf.StringValue subject_id = 7;
  google.protobuf.StringValue teacher_id = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message ListTimetableEntriesResponse {
  repeated TimetableEntryResponse entries = 1;
}

message GetClassTimetableRequest {
  string institute_id = 1;
  google.protobuf.StringValue class_id = 2;
  google.protobuf.StringValue academic_session_id = 3;
}
